--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "jest": "^26.6.3",
+    "mongoose": "^5.12.15",
+    "nodemon": "^2.0.7",
     "supergoose": "^0.2.6"
   }
 }
